app-liv link add

--- a/jp/index.html
+++ b/jp/index.html
@@ -44,6 +44,8 @@
 							<p>ワードリマインダー(WordRemindr)は単語暗記のために作られたTO-DOリストスタイルのiPhoneアプリケーションです。覚えるリストに単語を追加して、一回タップでiOSに内蔵された辞書を使って言葉の意味を調べることができます。単語の意味を確実に暗記した後は、その単語をチェックして覚えたリストに送ってください。<br />
 				        		<a href="https://itunes.apple.com/us/app/wordremindr/id570150087?ls=1&mt=8">App Storeから170円でダウンロード</a>
 				        	</p>
+				        	<p>「<a href="http://app-liv.jp/570150087/">Appliv</a>」と「<a href="http://nikkan.app-liv.jp/archives/13309">日刊Appliv</a>」に掲載されました。
+				        	</p>
 			        </div>
 	        </section>
 	        
