--- a/jp/index.html
+++ b/jp/index.html
@@ -100,9 +100,13 @@
 			
 	        <hr class="sectionDevider"/>
 	        
-	        <section  class="note">
-	        <p><strong>注意</strong>：iOSの内蔵辞書は現在キーボードの言語設定によって単語を検索します。例えばキーボードの言語を英語に設定、英語の単語を検索すると、英英辞書から探します。設定が日本語のまま英語を検索すると、英和辞典から探します。</p>
+	        <section class="feature center">
+	        	<h2>iPad 支援</h2>
+	        	<p class="center">ユニバーサルアプリですからiPadからも美しく使えます。</p>
+	        	<img class="bigCenter" src="../img/ipadMiniImage1760jp.jpg" />
 	        </section>
+
+	        <hr class="sectionDevider"/>
 	        	
 			<section class="center">
 				<p class="center"><a href="mailto:ideas@zininworks.com">サポートにメール</a></p>      
