--- a/jp/index.html
+++ b/jp/index.html
@@ -42,7 +42,7 @@
 				        	<h2>ワードリマインダー</h2>
 				        	<p>単語暗記にいい To-do + 辞書</p>
 							<p>ワードリマインダー(WordRemindr)は単語暗記のために作られたTO-DOリストスタイルのiPhoneアプリケーションです。覚えるリストに単語を追加して、一回タップでiOSに内蔵された辞書を使って言葉の意味を調べることができます。単語の意味を確実に暗記した後は、その単語をチェックして覚えたリストに送ってください。<br />
-				        		<a href="https://itunes.apple.com/us/app/wordremindr/id570150087?ls=1&mt=8">App Storeから170円でダウンロード</a>
+				        		<a href="https://itunes.apple.com/us/app/wordremindr/id570150087?ls=1&mt=8">App Storeから400円でダウンロード</a>
 				        	</p>
 				        	<p>「<a href="http://app-liv.jp/570150087/">Appliv</a>」と「<a href="http://nikkan.app-liv.jp/archives/13309">日刊Appliv</a>」に掲載されました。
 				        	</p>
@@ -114,7 +114,7 @@
         </div>
         
         <div class="copyright">
-        <p>&copy; 2012 <a href="http://www.zininworks.com">Zininworks</a>, Inc</p>
+        <p>&copy; 2010 - <script>document.write(new Date().getFullYear())</script> <a href="http://www.zininworks.com">Zininworks</a></p>
         </div>
 
         <script>
