insert iTunes Affiliation Program js

--- a/index.html
+++ b/index.html
@@ -109,9 +109,13 @@
 			</section>       
         </div>
         
-        <div class="copyright">
-        <p>&copy; 2010 - <script>document.write(new Date().getFullYear())</script> <a href="http://www.zininworks.com">Zininworks</a></p>
-        </div>
+        <footer>
+        	<!-- iTunes Affiliation Program -->
+	        <script type='text/javascript'>var _merchantSettings=_merchantSettings || [];_merchantSettings.push(['AT', '11lIqv']);(function(){var autolink=document.createElement('script');autolink.type='text/javascript';autolink.async=true; autolink.src= ('https:' == document.location.protocol) ? 'https://autolinkmaker.itunes.apple.com/js/itunes_autolinkmaker.js' : 'http://autolinkmaker.itunes.apple.com/js/itunes_autolinkmaker.js';var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(autolink, s);})();</script>
+	        <div class="copyright">
+        		<p>&copy; 2010 - <script>document.write(new Date().getFullYear())</script> <a href="http://www.zininworks.com">Zininworks</a></p>
+        	</div>
+        </footer>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
